# emberry

./: .gitignore  LICENSE.md  README.md  offer.json  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nightly.yml  stable.yml
public/: default.css  global.css
public/fonts/: fonts.css
src/: App.svelte  main.ts  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  p2p.rs
src/comp/: Chat.svelte  Feed.svelte  Users.svelte
src/core/: _client.ts  client.ts  hooks.ts  storage.ts  traffic.ts
src/nav/: Home.svelte  Login.svelte
src/win/: Titlebar.svelte
