[package]
name = "emberry"
version = "0.0.0"
description = "A cool chat app"
authors = ["Max Coppen"]
license = ""
repository = ""
default-run = "emberry"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
tauri-plugin-shadows = { git = "https://github.com/tauri-apps/tauri-plugin-shadows", features = ["tauri-impl"] } # or "tao-impl" for TAO projects.
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
webrtc = "0.4.0"
lazy_static = "1.4.0"
futures-util = "0.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
envy = "0.4.2"
base64 = "0.13.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
